--- a/src/main/resources/view/Clustering.fxml
+++ b/src/main/resources/view/Clustering.fxml
@@ -56,7 +56,10 @@
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin></CheckComboBox>
-            <RangeSlider fx:id="rangeSlider" blockIncrement="1.0" highValue="10.0" lowValue="2.0" majorTickUnit="1.0" max="15.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <RangeSlider fx:id="rangeSlider" blockIncrement="1.0" highValue="10.0" lowValue="2.0" majorTickUnit="1.0" max="15.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="4" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin></RangeSlider>
             <Button mnemonicParsing="false" onAction="#executeOptimal" text="%clustering.analize" GridPane.columnIndex="4" GridPane.rowIndex="2" />
             <GridPane GridPane.columnIndex="3">
               <columnConstraints>
@@ -72,7 +75,10 @@
                </children>
             </GridPane>
             <Button mnemonicParsing="false" onAction="#execute" text="%clustering.execute" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-            <Label text="%clustering.numberOfClusters" GridPane.columnIndex="4" />
+            <Label text="%clustering.numberOfClusters" GridPane.columnIndex="4">
+               <GridPane.margin>
+                  <Insets right="10.0" />
+               </GridPane.margin></Label>
          </children>
       </GridPane>
    </top>
@@ -81,12 +87,12 @@
          <items>
             <TabPane minWidth="-Infinity" prefHeight="200.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="Tab 1">
+                <Tab text="%clustering.2Dgraph">
                      <content>
                         <WebView fx:id="webViewScatter" cache="true" cacheHint="SPEED" minHeight="-1.0" minWidth="600.0" prefHeight="-1.0" />
                      </content>
                   </Tab>
-                <Tab text="Tab 2">
+                <Tab text="%clustering.silhouetteAnalysis">
                      <content>
                         <WebView fx:id="webViewSilhouette" cache="true" cacheHint="SPEED" prefHeight="200.0" prefWidth="200.0" />
                      </content>
@@ -130,7 +136,7 @@
                         </BorderPane>
                      </content>
                 </Tab>
-                <Tab text="%clustering.rename">
+                <Tab text="%clustering.label">
                      <content>
                         <BorderPane>
                            <center>
@@ -140,7 +146,7 @@
                                  </BorderPane.margin></PropertySheet>
                            </center>
                            <bottom>
-                              <Button fx:id="buttonRename" mnemonicParsing="false" text="%clustering.rename" BorderPane.alignment="CENTER">
+                              <Button fx:id="buttonRename" mnemonicParsing="false" text="%clustering.label" BorderPane.alignment="CENTER">
                                  <BorderPane.margin>
                                     <Insets bottom="20.0" />
                                  </BorderPane.margin>
