--- a/src/main/resources/view/Clustering.fxml
+++ b/src/main/resources/view/Clustering.fxml
@@ -92,6 +92,7 @@
                   <Button mnemonicParsing="false" onAction="#executeOptimal" text="%clustering.analyze" GridPane.columnIndex="1" />
                </children>
             </GridPane>
+            <Button mnemonicParsing="false" onAction="#executeHierarchical" text="Cluster jerarquico" GridPane.columnIndex="3" GridPane.rowIndex="3" />
          </children>
       </GridPane>
    </top>
@@ -105,7 +106,7 @@
                         <WebView fx:id="webViewScatter" cache="true" cacheHint="SPEED" minHeight="-1.0" minWidth="600.0" prefHeight="-1.0" />
                      </content>
                   </Tab>
-                  <Tab text="3D">
+                  <Tab text="%clustering.3Dgraph">
                      <content>
                         <WebView fx:id="webView3DScatter" prefHeight="200.0" prefWidth="200.0" />
                      </content>
