--- a/src/main/resources/view/Clustering.fxml
+++ b/src/main/resources/view/Clustering.fxml
@@ -5,11 +5,11 @@
 
 <TabPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.clustering.controller.GeneralController">
   <tabs>
-    <Tab closable="false" text="Clásica">
+    <Tab closable="false" text="%clustering.standard">
         <fx:include fx:id="classic" source="./clustering/Classic.fxml" />
     </Tab>
     
-    <Tab closable="false" text="Jeráquica">
+    <Tab closable="false" text="%clustering.hierarchical">
         <fx:include fx:id="hierarchical" source="./clustering/Hierarchical.fxml" />
     </Tab>
   </tabs>
