--- a/src/main/resources/view/Welcome.fxml
+++ b/src/main/resources/view/Welcome.fxml
@@ -17,6 +17,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
@@ -115,10 +116,11 @@
                   </Tab>
                   <Tab text="%text.search">
                      <content>
-                        <GridPane>
+                        <GridPane hgap="5.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" />
                             <ColumnConstraints hgrow="SOMETIMES" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints vgrow="SOMETIMES" />
@@ -127,15 +129,21 @@
                            <children>
                               <TextField fx:id="textFieldSearch" GridPane.hgrow="ALWAYS">
                                  <GridPane.margin>
-                                    <Insets left="10.0" right="10.0" />
+                                    <Insets left="5.0" />
                                  </GridPane.margin>
                               </TextField>
                               <Button fx:id="buttonSearch" mnemonicParsing="false" onAction="#onActionSearch" text="%button.search" GridPane.columnIndex="1">
                                  <GridPane.margin>
-                                    <Insets right="5.0" />
+                                    <Insets />
                                  </GridPane.margin>
                               </Button>
-                              <ListView fx:id="listViewSearch" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+                              <ListView fx:id="listViewSearch" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="1" />
+                              <HBox alignment="CENTER_LEFT" spacing="5.0" GridPane.columnIndex="2">
+                                 <children>
+                                    <Label text="%text.total" />
+                                    <Label fx:id="totalLabel" />
+                                 </children>
+                              </HBox>
                            </children>
                         </GridPane>
                      </content>
@@ -198,9 +206,9 @@
          </font></Label>
       <GridPane layoutX="310.0" layoutY="110.0" prefHeight="55.0" prefWidth="410.0">
         <columnConstraints>
-          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="170.0" minWidth="10.0" prefWidth="170.0" />
-            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="140.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
