--- a/src/main/resources/css/chart.css
+++ b/src/main/resources/css/chart.css
@@ -75,15 +75,21 @@ html,body
 	
 
 	
+.apexchart-container
+{
+	clear: both;
+}
 .chart-container
 {
 	height:88.0%;
 	width: 95.0%;
-	margin:2.0%;
+	margin-top:4%;
+	margin-left:2%;
 	display: none;
 }
 	
 .controles{
+	float:left;
 	position: relative;
 	width: 100.0%;
 	background-color: #f2f2f2;
@@ -143,5 +149,10 @@ input[type="button"][disabled] {
 
 .apexcharts{
 	font-weight: bold;
-	font-size: 14px;
+	font-size: 14.0px;
+}
+
+
+.tabulator .tabulator-header .tabulator-col {
+    text-align:center;
 }
