--- a/src/main/resources/css/chart.css
+++ b/src/main/resources/css/chart.css
@@ -142,7 +142,9 @@ html,body
 	background-color:  #f2f2f2;
 	box-shadow: inset 0.0 -3.0px 0.0px 0.0px #25c5d8;
 }
-input[type="button"][disabled] {
+ 
+button:disabled,
+button[disabled] {
 	background-color:  #f2f2f2;
 	box-shadow: inset 0.0 -3.0px 0.0px 0.0px #25c5d8;
 }
