--- a/src/main/resources/view/OptimalClusters.fxml
+++ b/src/main/resources/view/OptimalClusters.fxml
@@ -6,7 +6,7 @@
 
 <StackPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.clustering.controller.AnalysisController">
    <children>
-      <WebView fx:id="webView" minHeight="-Infinity" minWidth="-Infinity" />
+      <WebView fx:id="webView" minHeight="-Infinity" minWidth="-Infinity" visible="false" />
       <ProgressIndicator fx:id="progressIndicator" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="100.0" />
    </children>
 </StackPane>
