--- a/src/main/resources/view/Menu.fxml
+++ b/src/main/resources/view/Menu.fxml
@@ -62,6 +62,7 @@
             <Menu mnemonicParsing="false" text="%menu.help">
                <items>
                   <MenuItem onAction="#courseStats" text="%menu.coursestats" />
+                  <MenuItem onAction="#userGuide" text="%menu.usermanual" />
                   <MenuItem onAction="#moreInfo" text="%menu.moreinfo" />
                   <MenuItem fx:id="MIAboutUBUGrades" onAction="#aboutApp" text="%menu.about" />
                </items>
