--- a/src/main/resources/view/Selection.fxml
+++ b/src/main/resources/view/Selection.fxml
@@ -99,8 +99,8 @@
 												<TextField fx:id="courseModuleTextField" layoutX="6.0" layoutY="28.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
 												<CheckBox fx:id="checkBoxCourseModule" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" text="%label.withhidden" />
 												<CheckBox fx:id="checkBoxActivityCompleted" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" text="%label.withcompletion" />
-												<CheckComboBox fx:id="checkComboBoxCourseModule" layoutX="140.0" layoutY="28.0" prefHeight="31.0" prefWidth="108.0" />
-                                    <CheckComboBox fx:id="checkComboBoxSection" layoutX="260.0" layoutY="28.0" prefHeight="31.0" prefWidth="108.0" />
+												<CheckComboBox fx:id="checkComboBoxCourseModule" layoutX="140.0" layoutY="28.0" prefHeight="31.0" prefWidth="108.0" showCheckedCount="true" title="" />
+                                    <CheckComboBox fx:id="checkComboBoxSection" layoutX="260.0" layoutY="28.0" prefHeight="31.0" prefWidth="108.0" showCheckedCount="true" title="" />
 											</children>
 										</Pane>
 									</top>
@@ -145,7 +145,7 @@
 							<children>
 								<TextField fx:id="activityTextField" layoutX="6.0" layoutY="28.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
 								<CheckBox fx:id="checkBoxActivity" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" text="%label.withhidden" />
-								<CheckComboBox fx:id="checkComboBoxModuleType" layoutX="139.0" layoutY="28.0" prefHeight="31.0" prefWidth="108.0" />
+								<CheckComboBox fx:id="checkComboBoxModuleType" layoutX="139.0" layoutY="28.0" prefHeight="31.0" prefWidth="108.0" showCheckedCount="true" title="" />
 							</children>
 						</Pane>
 					</top>
